src/test/resources/outputs/output_error.txt
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:8: error: value should is not a member of Map[String,Int]
      school.db should be (Map())
                ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:8: error: not found: value be
      school.db should be (Map())
                       ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:14: error: value should is not a member of Map[String,Int]
    school.db should be (Map(2 -> Seq("Aimee")))
              ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:14: error: not found: value be
    school.db should be (Map(2 -> Seq("Aimee")))
                     ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:22: error: value should is not a member of Map[String,Int]
    school.db should be (Map(2 -> Seq("James", "Blair", "Paul")))
              ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:22: error: not found: value be
    school.db should be (Map(2 -> Seq("James", "Blair", "Paul")))
                     ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:29: error: value should is not a member of Map[String,Int]
    school.db should be (Map(3 -> Seq("Chelsea"), 7 -> Seq("Logan")))
              ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:29: error: not found: value be
    school.db should be (Map(3 -> Seq("Chelsea"), 7 -> Seq("Logan")))
                     ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:37: error: value should is not a member of Seq[String]
    school.grade(5) should be (Seq("Franklin", "Bradley"))
                    ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:37: error: not found: value be
    school.grade(5) should be (Seq("Franklin", "Bradley"))
                           ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:42: error: value should is not a member of Seq[String]
    school.grade(1) should be (Seq())
                    ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:42: error: not found: value be
    school.grade(1) should be (Seq())
                           ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:56: error: value should is not a member of Map[Int,Seq[String]]
    school.sorted should be (sorted)
                  ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:56: error: not found: value be
    school.sorted should be (sorted)
                         ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:57: error: value should is not a member of List[Int]
    school.sorted.keys.toList should be (Seq(3, 4, 6))
                              ^
/tmp/exercise/src/test/scala/GradeSchoolTest.scala:57: error: not found: value be
    school.sorted.keys.toList should be (Seq(3, 4, 6))
                                     ^
16 errors
